--- a/grpe_larm_mother/launch/simulation.yaml
+++ b/grpe_larm_mother/launch/simulation.yaml
@@ -1,7 +1,6 @@
 launch:
 
-#- executable: 
- #   cmd: gnome-terminal --tab -e 'ros2 run teleop_twist_keyboard teleop_twist_keyboard'
+
     
 - node:
     pkg: "rviz2"
@@ -14,7 +13,7 @@ launch:
     name: "mov_obstacles"
 
 - node:
-    pkg: "grpe_larm_mother"
+    pkg: "mb6_basic"
     exec: "multiplexer"
     name: "multiplexer"
     
