--- a/grpe_larm_mother/launch/challenge1.yaml
+++ b/grpe_larm_mother/launch/challenge1.yaml
@@ -11,4 +11,9 @@ launch:
 - node:
     pkg: "grpe_larm_mother"
     exec: "camera_driver.py"
-    name: "detectin_bouteilles"
+    name: "detection_bouteilles"
+
+- node:
+    pkg: "grpe_larm_mother"
+    exec: "depth_calc.py"
+    name: "distance_bouteilles"
